Added tests for cvontrollers and Unit tests for services and subservices.