@@ -3,13 +3,17 @@ package com.ramcel.cinema.reservation.functionalities.ticket.validators;
 import com.ramcel.cinema.reservation.db.entity.SeatEntity;
 import com.ramcel.cinema.reservation.db.repositories.SeatRepository;
 import com.ramcel.cinema.reservation.functionalities.exception.IllegalReservationException;
+import com.ramcel.cinema.reservation.functionalities.seat.Seat;
 import com.ramcel.cinema.reservation.functionalities.seat.SeatStatus;
 import com.ramcel.cinema.reservation.functionalities.ticket.Ticket;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.function.IntPredicate;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Component
@@ -18,6 +22,9 @@ public class TicketValidator {
     @Autowired
     private SeatRepository seatRepository;
 
+    public TicketValidator(SeatRepository repository){
+        this.seatRepository = repository;
+    }
 
     public boolean isValid(Ticket ticket){
         return  this.isValid(List.of(ticket));
@@ -56,16 +63,33 @@ public class TicketValidator {
     private static boolean canBookSeatWithoutHoles(Map<Long, List<SeatEntity>> bookedSeatsByRowMap) {
         return bookedSeatsByRowMap.values()
                 .stream()
-                .map(List::toArray)
-                .map(v -> IntStream.range(0, v.length - 2)
-                .anyMatch(checkForHoles((SeatEntity[]) v)))
-                .reduce((x,y) -> x&&y).orElse(false);
+                .map(seats -> seats.stream()
+                        .sorted(Comparator.comparingInt(SeatEntity::getSeatNumber))
+                        .collect(Collectors.toList()))
+                .anyMatch(TicketValidator::hasNoHoles);
     }
+
+    private static boolean hasNoHoles(List<SeatEntity> seats) {
+        for (int i = 0; i < seats.size() - 2; i++) {
+            SeatEntity seat1 = seats.get(i);
+            SeatEntity seat2 = seats.get(i + 1);
+            SeatEntity seat3 = seats.get(i + 2);
+
+            if (seat1.getStatus() != SeatStatus.AVAILABLE
+                    && seat2.getStatus() == SeatStatus.AVAILABLE
+                    && seat3.getStatus() != SeatStatus.AVAILABLE) {
+                return false;
+            }
+        }
+        return true;
+    }
+
 
     private boolean passedBasicValidation(Ticket ticket){
         boolean hasASeat = (ticket.getSeatId() > 0);
         boolean hasValidHolder = HolderValidator.validateHolder(ticket);
-        return  hasASeat && hasValidHolder;
+        boolean isMoreThan15MinsAway = ticket.getScreeningDate().isAfter(LocalDateTime.now().plusMinutes(15));
+        return  hasASeat && hasValidHolder && isMoreThan15MinsAway;
     }
 
     private Boolean passedBasicValidation(List<Ticket> ticketList) {
@@ -77,7 +101,7 @@ public class TicketValidator {
 
     private List<SeatEntity> getBookedSeatsInRow(Long rowId, Long currentScreening) {
         return seatRepository.findSeatsByRoomRowAndScreeningID(rowId, currentScreening)
-                .stream().filter(SeatEntity::isOccupied).toList();
+                .stream().filter(SeatEntity::isOccupied).collect(Collectors.toList());
     }
 
     private boolean hasMultipleScreenings(List<Ticket> ticketList){
@@ -92,16 +116,6 @@ public class TicketValidator {
     }
 
 
-    private static IntPredicate checkForHoles(SeatEntity[] seats) {
-        return i -> {
-            SeatEntity seat1 = seats[i];
-            SeatEntity seat2 = seats[i + 1];
-            SeatEntity seat3 = seats[i + 2];
 
-            return seat1.getStatus() != SeatStatus.AVAILABLE
-                    && seat2.getStatus() == SeatStatus.AVAILABLE
-                    && seat3.getStatus() != SeatStatus.AVAILABLE;
-        };
-    }
 
 }
